[metadata]
name = wisteria
version = attr: wisteria.__version__
url = https://github.com/JaydenGrubb1/wisteria
author = Jayden Grubb
author_email = contact@jaydengrubb.com
maintainer = Jayden Grubb
maintainer_email = contact@jaydengrubb.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT Licens
    Programming Language :: Python
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
license = MIT
description = ROS package version snapshot tool for RoboStack.
long_description = file: README.md
keywords = ros, robostack, snapshot

[options]
python_requires = >=3.6
setup_requires = setuptools
install_requires =
  rosdistro >=0.8.0
  pyyaml >=5.3.1
packages = find:

[options.entry_points]
console_scripts =
    wisteria = wisteria.main:main
